# xflFastR-py

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
xfl_fast_r/: __init__.py  get_xfl.py  utils.py
